# 3D-OpenGL-Game-Engine

./: .gitignore  3DGameEngine.sln  CMakeLists.txt  build.bat  build.sh  compile_commands.json  imgui.ini  workspace.code-workspace
3DGameEngine/: 3DGameEngine.vcxproj  3DGameEngine.vcxproj.filters  BasicShader.cpp  BasicShader.h  Camera.h  Core.cpp  Core.h  DirectionalLight.h  Input.h  Main.cpp  Material.h  Mesh.cpp  Mesh.h  OBJloader.cpp  OBJloader.h  PhongShader.cpp  PhongShader.h  Plans.txt  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Timer.cpp  Timer.h  Transform.h  example.yml  imgui.ini
3DGameEngine/Engine/: .vimrc  AssimpTestGame.cpp  AssimpTestGame.h  AudioTestGame.cpp  AudioTestGame.h  Camera.h  ImGuiTestGame.cpp  ImGuiTestGame.h  Main.cpp  PhysicsTestGame.cpp  PhysicsTestGame.h  TestGame.cpp  TestGame.h  imgui.ini  stb_image.h
3DGameEngine/Engine/3DMath/: 3DMath.h  Matrix.h  Quaternion.h  Vector.h
3DGameEngine/Engine/Audio/: AudioEngine.cpp  AudioEngine.h  AudioListener.cpp  AudioListener.h  AudioSource.cpp  AudioSource.h
3DGameEngine/Engine/Core/: Camera.h  Color.cpp  Color.h  CoreEngine.cpp  CoreEngine.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Input.cpp  Input.h  RenderingEngine.cpp  RenderingEngine.h  SDL_Backend.cpp  SDL_Backend.h  Time.cpp  Time.h  Transform.h  Window.cpp  Window.h
3DGameEngine/Engine/GameComponents/: Animation.h  Animator.cpp  Animator.h  Camera.h  Collider.h  FreeLook.cpp  FreeLook.h  FreeMove.cpp  FreeMove.h  GameComponent.h  Lighting.cpp  Lighting.h  MeshRenderer.h  Rigidbody.cpp  Rigidbody.h
3DGameEngine/Engine/Memory/: VAO.cpp  VAO.h
3DGameEngine/Engine/Physics/: AABB.cpp  AABB.h  BoundingSphere.cpp  BoundingSphere.h  Box.h  ConvexHull.h  IntersectData.h  PhysicsEngine.cpp  PhysicsEngine.h  Plane.cpp  Plane.h  TriggerCollider.cpp  TriggerCollider.h
3DGameEngine/Engine/Rendering/: BRDFLUTShader.h  BasicShader.cpp  BasicShader.h  BasicShapes.h  CubeMap.cpp  CubeMap.h  DebugDrawer.cpp  DebugDrawer.h  DebugShader.h  DebugUI.cpp  DebugUI.h  DebugUIElements.cpp  DebugUIElements.h  EquirectangularToCubemapShader.h  IrradianceShader.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  PBR.cpp  PBR.h  PhongShader.cpp  PhongShader.h  PrefilterShader.h  RadianceHDRTexture.cpp  RadianceHDRTexture.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
3DGameEngine/Engine/Rendering/Lighting/: Attenuation.h  BaseLight.h  DirectionalLight.h  ForwardAmbient.cpp  ForwardAmbient.h  ForwardDirectional.cpp  ForwardDirectional.h  ForwardPoint.cpp  ForwardPoint.h  ForwardSpot.cpp  ForwardSpot.h  Lighting.cpp  Lighting.h  PointLight.h  SpotLight.h
3DGameEngine/Engine/TestGames/: AnimationTestGame.cpp  AnimationTestGame.h  AssimpTestGame.cpp  AssimpTestGame.h  AudioTestGame.cpp  AudioTestGame.h  ImGuiTestGame.cpp  ImGuiTestGame.h  PhysicsTestGame.cpp  PhysicsTestGame.h
3DGameEngine/Engine/Utils/: AssimpImporter.cpp  AssimpImporter.h  DebuggingMacros.h  FileLoader.cpp  FileLoader.h  OBJloader.cpp  OBJloader.h  Registry.h  stb_image.h
3DGameEngine/Engine/Utils/Quickhull/: ConvexHull.hpp  HalfEdgeMesh.hpp  MathUtils.hpp  QuickHull.cpp  QuickHull.hpp  Types.hpp
3DGameEngine/Engine/Utils/Quickhull/Structs/: Mesh.hpp  Plane.hpp  Ray.hpp  VertexDataSource.hpp
3DGameEngine/include/3DMath/: 3DMath.h  Matrix.h  Quaternion.h  Vector.h  Vector2.h  Vector3.h  Vector4.h
3DGameEngine/include/BulletMultiThreading/: b3Win32ThreadSupport.cpp  btTaskScheduler.cpp
3DGameEngine/include/imgui/: imgui_impl_sdl.h
3DGameEngine/lib/: Bullet2FileLoader.lib  Bullet3Collision.lib  Bullet3Common.lib  Bullet3Dynamics.lib  Bullet3Geometry.lib  Bullet3OpenCL_clew.lib  BulletCollision.lib  BulletDynamics.lib  BulletFileLoader.lib  BulletInverseDynamics.lib  BulletInverseDynamicsUtils.lib  BulletSoftBody.lib  BulletWorldImporter.lib  BulletXmlWorldImporter.lib  ConvexDecomposition.lib  GIMPACTUtils.lib  HACD.lib  LinearMath.lib
3DGameEngine/res/: 2cubes_UV_test.3ds  2cubes_UV_test.fbx  2cubes_UV_testASCII.fbx  Character Running.3ds  Character Running.blend  Character Running.blend1  Character Running.dae  Character Running.fbx  Character Running2.fbx  Character Running_ascii.fbx  anim_cube.assxml  anim_cube.dae  basicShader.frag  basicShader.vert  cubeUV.fbx  debugLine.frag  debugLine.vert  forward-ambient.frag  forward-ambient.vert  forward-directional.frag  forward-point.frag  forward-spot.frag  forward-spot.vert  parenting.fbx  parentingTextureMaterial.fbx  phong.frag  phong.vert  wtf.fbx
3DGameEngine/res/Shaders/: background.vert  basicShader.frag  basicShader.vert  brdf.frag  brdf.vert  cubeMap.vert  equiToCubeMap.frag  forward-ambient-PBR.frag  forward-ambient.frag  forward-ambient.vert  forward-directional-PBR.frag  forward-directional.frag  forward-directional.vert  forward-point-PBR.frag  forward-point.frag  forward-point.vert  forward-spot-PBR.frag  forward-spot.frag  forward-spot.vert  irradiance.frag  phong.frag  phong.vert  prefilter.frag
cmake/: FindAssimp.cmake  FindFMOD.cmake
